--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -25,6 +26,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.292.0",
     "react": "^18.3.1",
+    "react-checkbox": "^0.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
@@ -40,6 +42,6 @@
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^4.5.0"
   }
 }
